Docs: 문서 작업 파일 업로드

--- a/docs/회의록.md
+++ b/docs/회의록.md
@@ -121,3 +121,116 @@
   - 알람 기능 완성
   - 쪽지 기능 구성
   - 스터디 데이터 구성
+
+### **2023. 02. 02**
+- FrontEnd
+  - 커뮤니티 댓글 기능 추가
+  - 로그인정보 새로고침 유지
+  - 전체 디자인 수정
+- BackEnd
+  - 스터디 더미데이터 작성 및 정리 완료
+  - 데이터베이스 확장
+
+### **2023. 02. 03**
+- Team
+  - 컨설턴트님과의 중간 점검
+- FrontEnd
+  - 커뮤니티 페이지 댓글 실시간 반영 및 무한루프 해결
+  - 태그 백엔드 연결
+  - 스터디 페이지 정리
+  - 쪽지함 정리
+- BackEnd
+  - 백엔드 데이터 추가
+  - 웹소켓 작업 시작
+  - 프론트엔드 요구사항 수정
+
+### **2023. 02. 06**
+- Team
+  - 웹소켓
+  - 5주차 지라 작성
+- FrontEnd
+  - 스터디 페이지 기능 구성
+  - 디자인 총괄 - 갓서연
+  - 팔로우 기능 구현
+- BackEnd
+  - 강좌 DB에 넣기
+  - 사진 저장 방법 강구
+  - 팔로워 팔로잉 유저 DTO 생성
+
+### **2023. 02. 07**
+- FrontEnd
+  - 스터디 페이지 기능 구성
+  - 디자인 총괄 - 갓서연
+  - 강의 질문 커뮤니티에 올림
+- BackEnd
+  - 웹소켓 이용 강의 화면 공유 성공
+  - 사진 저장 알아냄
+  - 더미데이터 많이 작성
+
+### **2023. 02. 08**
+- FrontEnd
+  - 스터디 페이지 기능 구성
+  - 소켓 대화 디자인
+  - async 마스터
+  - 디자인 총괄 - 갓서연
+  - 강의 질문 마이페이지에 올림
+- BackEnd
+  - api 수정
+
+### **2023. 02. 09**
+- FrontEnd
+  - 스터디 페이지 기능 구성
+  - 스터디 메인 디자인
+  - 스터디 플레이어 이것저것 추가
+  - 알림 기능 추가
+- BackEnd
+  - 히스토리 생성
+  - api 수정
+
+### **2023. 02. 10**
+- FrontEnd
+  - 메인 페이지 리디자인
+  - 스터디 플레이어 기능 완성
+  - 마이 페이지 리디자인
+  - 페이지네이션
+- BackEnd
+  - DTO 정리
+  - api 수정
+
+### **2023. 02. 13**
+- FrontEnd
+  - 스터디 페이지 리디자인
+  - 마이 페이지 리디자인
+  - 페이지네이션
+  - 에러 수정
+  - 서버 에러 퇴치
+- BackEnd
+  - 에러 수정
+  - api, DTO 정리
+  - 서버 에러 퇴치
+  - 파이프라인 재구성
+
+### **2023. 02. 14**
+- FrontEnd
+  - 스터디 페이지 리디자인
+  - 메인 페이지 리디자인
+  - 각종 악성 유저 퇴치
+- BackEnd
+  - 에러 퇴치
+
+### **2023. 02. 15**
+- 스터디 페이지 리디자인
+- 메인 페이지 리디자인
+- 스터디 플레이어 기능 재구성
+- 피드백 디펜스
+- 포딩 메뉴얼 작성
+- UCC 제작
+- PPT 제작
+- POST 시간 문제 해결
+
+### **2023. 02. 16**
+- 페이지 최종 리디자인
+- 피드백 디펜스
+- UCC제작
+- PPT제작
+- 서버 클리어
